tree-sitter-cook/grammar.js
    source_file: ($) => repeat($._toplevel_item),

    _toplevel_item: ($) =>
      choice(
        $.recipe,
        $.chore,
        $.files_declaration,
        $.tools_declaration,
        $.probe,
        $.config_block,
        $.register_block,
        $.top_level_module_call,
        $.use_declaration,
        $.import_declaration,
        $.comment,
        $._newline,
      ),

    comment: ($) => token(seq("#", /[^\n]*/)),
    _newline: ($) => /\n/,

    // ── Top-level declarations ─────────────────────────────────

    // App. A.2 (CS-0206). Two forms behind one keyword:
    //   `use NAME`            — the name form, unchanged since CS-0035;
    //   `use ALIAS? PATH`     — the path form, PATH ending in `.lua`.
    // The three productions share the prefix `"use" _lua_ident_name`, so the
    // choice between binding that identifier as `module` or as `alias` is
    // settled by one token of lookahead: a NEWLINE closes the name form, a
    // `use_path` continues the path form.
    use_declaration: ($) =>
      seq(
        "use",
        choice(
          field("module", $._lua_ident_name),
          seq(
            optional(field("alias", $._lua_ident_name)),
            field("path", $._use_path),
          ),
        ),
        $._newline,
      ),

    import_declaration: ($) =>
      seq(
        "import",
        field("name", alias($._bare_identifier, $.import_name)),
        field("path", $.path),
        $._newline,
      ),

    config_block: ($) =>
      seq(
        "config",
        optional(field("name", $._name)),
        $._newline,
        alias($._config_block_content, $.lua_code),
      ),

    // App. A.1 + CS-0072. A top-level `register` block carries Lua source
    // that runs at register-phase before any recipe declarations. The body
    // ranges from the line after the header to the next column-0 line
    // classified as `recipe`, `chore`, `config`, `use`, `import`, `register`,
    // or (per issue COOK-51) a top-level module_call. The body MAY be empty
    // (`register-block-empty` fixture is literally just the word `register`),
    // so the lua_code content is optional. The terminating NEWLINE is also
    // optional because EOF can follow the keyword directly.
    register_block: ($) =>
      seq(
        "register",
        $._newline,
        optional(alias($._register_block_content, $.lua_code)),
      ),

    // ── Recipes ────────────────────────────────────────────────

    recipe: ($) =>
      prec.right(
        seq(
          $._recipe_header,
          $._newline,
          repeat($._recipe_item),
        ),
      ),

    _recipe_header: ($) => $.explicit_recipe_header,

    explicit_recipe_header: ($) =>
      prec(
        1,
        seq(
          "recipe",
          field("name", $._decl_name),
          optional(seq(":", $.dependency_list)),
        ),
      ),

    dependency_list: ($) => repeat1($._name),

    // ── Chores ─────────────────────────────────────────────────

    chore: ($) =>
      prec.right(
        seq(
          $.chore_header,
          $._newline,
          repeat($._chore_item),
        ),
      ),

    chore_header: ($) =>
      seq(
        "chore",
        field("name", $._decl_name),
        field("params", optional($.chore_param_list)),
        optional(seq(":", $.dependency_list)),
      ),

    // COOK-36 / Standard §7.1.1 chore parameters. The grammar accepts
    // any order of param variants; spec ordering rules (required →
    // defaulted → at-most-one variadic), reserved-name ban, dot-ban,
    // and duplicate-name detection are semantic checks enforced by the
    // Rust parser, not tree-sitter.
    chore_param_list: ($) => repeat1($.chore_param),

    chore_param: ($) =>
      choice(
        $.required_param,
        $.defaulted_param,
        $.variadic_param,
      ),

    required_param: ($) => field("name", $._chore_param_name),

    defaulted_param: ($) =>
      seq(
        field("name", $._chore_param_name),
        "=",
        field("default", choice($.string, $.lua_expr_default)),
      ),

    variadic_param: ($) =>
      seq(
        field("sigil", choice("+", "*")),
        field("name", $._chore_param_name),
      ),

    // Param-name shape: bare ASCII Lua-identifier. Tighter than
    // `_decl_bare` (no `-`, no `.`); a stricter superset of the
    // §7.1.1 grammar would be enforced by the Rust parser anyway.
    // The rule is hidden (`_`-prefix) so the tree carries
    // `name: (identifier)` rather than a redundant wrapper node.
    _chore_param_name: ($) =>
      alias(token(/[A-Za-z_][A-Za-z0-9_]*/), $.identifier),

    // `=( LUA_EXPR )` default. Tree-sitter doesn't parse Lua syntax;
    // it just scans a balanced-paren region with string awareness so
    // that nested parens (`cook.git.head_tag()`) and parens inside
    // strings (`"(boom)"`) don't break the scan. Multi-line Lua-expr
    // defaults are out of scope (chore_header is a single line).
    lua_expr_default: ($) =>
      seq(
        "(",
        repeat($._lua_expr_chunk),
        ")",
      ),

    _lua_expr_chunk: ($) =>
      choice(
        $.lua_expr_default, // nested parens
        token(/"(?:[^"\\\n]|\\[^\n])*"/),
        token(/'(?:[^'\\\n]|\\[^\n])*'/),
        token(prec(-1, /[^()"'\n]+/)),
      ),

    _chore_item: ($) =>
      choice(
        $.lua_line,
        $.lua_block,
        $.shell_command,
        $.comment,
        $._newline,
      ),

    // ── Named determinant sets (CS-0222) ───────────────────────

    _bare_probe_key: ($) =>
      token(/[A-Za-z_][A-Za-z0-9_-]*(:[A-Za-z_][A-Za-z0-9_-]*)*/),

    // Module-prefix-colon disambiguation (App. A.3.2, normative). The
    // dep-list-introducing `:` is distinguished from the module-prefix
    // `:` purely positionally: the dep-list colon is followed by
    // whitespace or end-of-line, the module-prefix colon by an ident
    // char. tree-sitter's token regexes can't express lookahead, so the
    // dep-colon token consumes one trailing whitespace char; maximal
    // munch then prefers it over `_bare_probe_key`'s internal colon only
    // when a space follows (`p: a` → deps), while `cc:zlib` (no space)
    // stays a single name token — as does any longer chain (`a:b:c`,
    // CS-0201).
    _recipe_item: ($) =>
      choice(
        seq(
          $._recipe_indent,
          choice(
            $.ingredients_step,
            $.gather_step,
            $.seal_step,
            $.cook_step,
            $.test_step,
            $.module_call,
          ),
        ),
        $.comment,
        $._newline,
      ),

    // App. A.4 + CS-0078 multi-line patterns:
    //   ingredients_step ::= "ingredients" (ingredient+ | probe_ref) NEWLINE
    //   ingredient       ::= STRING | "!" STRING
    // CONT is an external token (_step_continuation_newline) emitted only
    // when the next line begins with `"` or `!"`; otherwise the declaration
    // terminates and the next line dispatches per App. A.4's priority order.
    // The quote-vs-bare discriminator makes filesystem items mutually
    // exclusive with a probe source. Since CS-0201 a probe key has no
    // segment cap, so `ns:cards:items` lexes as one key; whether a
    // trailing segment selects a field is resolved at register time, not
    // in the grammar.
    gather_step: ($) =>
      choice(
        seq(
          "gather",
          choice($.string, $.ingredient_exclude),
          repeat(seq(optional($._step_continuation_newline), choice($.string, $.ingredient_exclude))),
          $._newline,
        ),
        seq(
          "gather",
          field("source", alias($._bare_probe_key, $.identifier)),
          repeat(seq(optional($._step_continuation_newline), $.string)),
          $._newline,
        ),
      ),

    cook_step: ($) =>
      seq(
        "cook",
        choice(
          field("outputs", $.lua_expr_output),
          seq(
            field("outputs", $.string),
            repeat(seq(
              optional($._step_continuation_newline),
              field("outputs", $.string),
            )),
          ),
        ),
        field("body", choice($.shell_block, $.exec_lua_block)),
        optional($.cook_mods),
        $._newline,
      ),

    shell_block: ($) =>
      seq(
        "{",
        repeat(
          choice(
            alias($._shell_block_content, $.shell_content),
            $.placeholder,
          ),
        ),
        "}",
      ),

    lua_line: ($) =>
      seq(
        ">",
        alias(token.immediate(/[^{\n][^\n]*/), $.lua_code),
        $._newline,
      ),

    lua_block: ($) =>
      seq(">{", alias($._lua_block_content, $.lua_code), "}", $._newline),

    // App. A.1 + A.4 top-level `module_call` (CS-0072). A column-0
    // `LUA_IDENT . IDENT_START …` statement, brace-balanced across
    // newlines per §{lexical.brace-blocks.lua-spans}. The full text
    // is collected by the external scanner so multi-line table-arg
    // forms (`cook_cc.bin("game", {\n  …\n})`) parse as a single
    // statement. Resolution of Lua-expression-hood is the runtime's
    // concern, not the grammar's. Recipe bodies reuse this exact token.
    module_call: ($) =>
      seq(
        alias($._top_level_module_call_text, $.module_call_text),
        $._newline,
      ),

    top_level_module_call: ($) =>
      seq(
        alias($._top_level_module_call_text, $.module_call_text),
        $._newline,
      ),

    shell_command: ($) =>
      seq(
        repeat1(
          choice(
            alias($._shell_content, $.shell_content),
            $.placeholder,
          ),
        ),
        $._newline,
      ),

    // ── Primitives ─────────────────────────────────────────────

    _name: ($) => choice(alias($._bare_identifier, $.identifier), $.string),

    _bare_identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_.\-]*/,

    // Recipe-body module calls are indented; retaining the indentation as a
    // hidden immediate token keeps a following column-zero module call in
    // the top-level dispatch without introducing another external token.
    _decl_name: ($) =>
      choice(
        alias($._decl_bare, $.identifier),
        alias($._decl_string, $.string),
      ),
    _lua_ident_name: ($) =>
      choice(
        alias($._lua_ident, $.identifier),
        alias($._lua_ident_string, $.string),
      ),
    _use_path: ($) =>
      choice(
        alias($._use_path_bare, $.path),
        alias($._use_path_string, $.string),
      ),
    placeholder: ($) =>
      seq(
        "$<",
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),

    _string_placeholder: ($) =>
      seq(
        token.immediate("$<"),
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),

    // String literals expose their inner placeholders. The fallback
    // `_string_chunk` keeps a bare `$` as text so a real placeholder
    // (which requires `$<`) is the only thing that consumes the `$<`
    // pair. NOTE: §2.11 strict-bail says a malformed `$<bad spaces>`
    // is literal text; with this structured rule the seq commits to
    // `$<` and errors at the missing `>`. The Rust parser remains the
    // source of truth for that edge case.
    // CS-0061: STRING admits both double- and single-quoted forms.
    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($._string_placeholder, $.placeholder),
              $._dq_string_chunk,
            ),
          ),
          token.immediate('"'),
        ),
        seq(
          "'",
          repeat(
            choice(
              alias($._sq_string_placeholder, $.placeholder),
              $._sq_string_chunk,
            ),
          ),
          token.immediate("'"),
        ),
      ),

    _dq_string_chunk: ($) =>
      choice(
        token.immediate(/[^"$]+/),
        token.immediate("$"),
      ),

    _sq_string_chunk: ($) =>
      choice(
        token.immediate(/[^'$]+/),
        token.immediate("$"),
      ),

    _sq_string_placeholder: ($) =>
      seq(
        token.immediate("$<"),
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),

    path: ($) => /[^\s\n]+/,

  },
});
