tree-sitter-cook/test/corpus/body-termination.txt
================
Recipe body terminated by next recipe
================

recipe a
    tools.prepare()
recipe b
    tools.finish()

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text)))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))))

================
Recipe body terminated by chore
================

recipe a
    tools.prepare()
chore clean
    rm -rf out

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text)))
  (chore
    (chore_header
      name: (identifier))
    (shell_command
      (shell_content))))

================
Column-zero module call terminates recipe body
================

recipe a
    tools.prepare()
cook_cc.bin("x")

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text)))
  (top_level_module_call
    (module_call_text)))

================
Recipe body terminated by register
================

recipe a
    tools.prepare()
register
local x = true

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text)))
  (register_block
    (lua_code)))

================
Chore body terminated by config
================

chore a
    echo ready
config build
value = true

---

(source_file
  (chore
    (chore_header
      name: (identifier))
    (shell_command
      (shell_content)))
  (config_block
    name: (identifier)
    (lua_code)))

================
Chore body terminated by use
================

chore a
    echo ready
use tools

---

(source_file
  (chore
    (chore_header
      name: (identifier))
    (shell_command
      (shell_content)))
  (use_declaration
    module: (identifier)))

================
Chore body terminated by import
================

chore a
    echo ready
import tools ./tools.lua

---

(source_file
  (chore
    (chore_header
      name: (identifier))
    (shell_command
      (shell_content)))
  (import_declaration
    name: (import_name)
    path: (path)))
