tree-sitter-cook/test/corpus/chores.txt
==================
basic chore
==================

chore clean
    rm -rf build

---

(source_file
  (chore
    (chore_header
      name: (identifier))
    (shell_command
      (shell_content))))

==================
chore shell commands may begin with recipe keywords
==================

chore keyword-tools
    cook dinner
    test -f dinner
    gather list --verbose
    seal package
    unseal package
    recipe dinner
    chore dinner
    probe dinner
    register dinner

---

(source_file
  (chore
    (chore_header
      name: (identifier))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))))

==================
chore rejects recipe step forms
==================

chore bad
    gather "src/*"
    cook "out"

chore bad-test
    test { true }

chore bad-probe-gather
    gather cards:items

chore bad-lua-output
    cook (foo) { echo nope }

---

(source_file
  (chore
    (chore_header
      name: (identifier)))
  (ERROR
    (import_name)
    (lua_code))
  (chore
    (chore_header
      name: (identifier)))
  (ERROR
    (import_name)
    (lua_code))
  (chore
    (chore_header
      name: (identifier)))
  (ERROR
    (import_name)
    (lua_code))
  (chore
    (chore_header
      name: (identifier)))
  (ERROR
    (import_name)
    (lua_code)))

==================
chore with deps
==================

chore play: build
    ./build/app

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      (dependency_list
        (identifier)))
    (shell_command
      (shell_content))))

==================
chore with Lua and all shell body forms
==================

chore status
    > print(h)
    >{
      print("block")
    }
    uname -a

---

(source_file
  (chore
    (chore_header
      name: (identifier))
    (lua_line
      (lua_code))
    (lua_block
      (lua_code))
    (shell_command
      (shell_content))))

==================
chore with required param (COOK-36)
==================

chore deploy target
    > deploy.run(target)

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      params: (chore_param_list
        (chore_param
          (required_param
            name: (identifier)))))
    (lua_line
      (lua_code))))

==================
chore with defaulted-string param (COOK-36)
==================

chore deploy target="staging"
    > deploy.run(target)

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      params: (chore_param_list
        (chore_param
          (defaulted_param
            name: (identifier)
            default: (string)))))
    (lua_line
      (lua_code))))

==================
chore with Lua-expression default (COOK-36)
==================

chore release version=(cook.git.head_tag() or "v0")
    > release.cut(version)

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      params: (chore_param_list
        (chore_param
          (defaulted_param
            name: (identifier)
            default: (lua_expr_default
              (lua_expr_default))))))
    (lua_line
      (lua_code))))

==================
chore with variadic +NAME param (COOK-36)
==================

chore lint +FILES
    > linter.run(FILES)

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      params: (chore_param_list
        (chore_param
          (variadic_param
            name: (identifier)))))
    (lua_line
      (lua_code))))

==================
chore with variadic *NAME param (COOK-36)
==================

chore fmt *files
    > fmt.run(files)

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      params: (chore_param_list
        (chore_param
          (variadic_param
            name: (identifier)))))
    (lua_line
      (lua_code))))

==================
chore with multiple params and deps (COOK-36)
==================

chore deploy target host="prod.example.com": build
    > deploy.run(target, host)

---

(source_file
  (chore
    (chore_header
      name: (identifier)
      params: (chore_param_list
        (chore_param
          (required_param
            name: (identifier)))
        (chore_param
          (defaulted_param
            name: (identifier)
            default: (string))))
      (dependency_list
        (identifier)))
    (lua_line
      (lua_code))))
