tree-sitter-cook/test/corpus/cs_0022.txt
====================
shell block one-line
====================

recipe build
    cook "build/{in.stem}.o" { gcc -c {in} -o {out} }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

==================
Declaration-only cook is rejected (CS-0133)
==================

recipe bad
    cook "out"

---

(source_file
  (recipe
    (explicit_recipe_header (identifier))
    (ERROR
      (string))))

====================
shell block multi-output indexed
====================

recipe gen
    cook "out.js" "out.wasm" {
        wasm-pack build
        cp pkg/main.js {out_1}
        cp pkg/main.wasm {out_2}
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      outputs: (string)
      body: (shell_block
        (shell_content)))))

====================
in.accessor in output
====================

recipe build
    gather "src/*.c"
    cook "build/{in.stem}.o" {
        gcc -c {in} -o {out}
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))
