tree-sitter-cook/test/corpus/declarations.txt
================
Use declaration (bare)
================

use cpp

---

(source_file
  (use_declaration
    module: (identifier)))

================
Use declaration (quoted)
================

use "cpp"

---

(source_file
  (use_declaration
    module: (string)))

================
Use declaration (path)
================

use ./build/helpers.lua

---

(source_file
  (use_declaration
    path: (path)))

================
Use declaration (quoted path)
================

use "./build/helpers.lua"

---

(source_file
  (use_declaration
    path: (string)))

================
Use declaration (alias and path)
================

use fmt ./tools/lua/formatting.lua

---

(source_file
  (use_declaration
    alias: (identifier)
    path: (path)))

================
Use declaration (quoted alias and quoted path)
================

use "fmt" "./tools/lua/formatting.lua"

---

(source_file
  (use_declaration
    alias: (string)
    path: (string)))

================
Use declaration (suffix-only path, no leading ./)
================

use helpers.lua

---

(source_file
  (use_declaration
    path: (path)))

================
Use path with a parent segment is rejected
================

use ../x.lua

---

(source_file
  (ERROR
    (lua_code)))

================
Use path with the workspace-root sigil is rejected
================

use //build/x.lua

---

(source_file
  (ERROR
    (lua_code)))

================
Absolute use path is rejected
================

use /opt/x.lua

---

(source_file
  (ERROR
    (lua_code)))

================
Use name with a second argument is rejected
================

use foo bar

---

(source_file
  (use_declaration
    module: (identifier)
    (ERROR)))

================
Import declaration
================

import backend ./services/backend

---

(source_file
  (import_declaration
    name: (import_name)
    path: (path)))

================
Unnamed config block
================

config
    var.CC = "gcc"

---

(source_file
  (config_block
    (lua_code)))

================
Named config block with Lua body
================

config release
    var.CXXFLAGS = "-O3"
    cpp.defaults({defines = {"NDEBUG"}})

---

(source_file
  (config_block
    name: (identifier)
    (lua_code)))

================
Config block (quoted name)
================

config "release"
    var.CXXFLAGS = "-O2"
    var.LDFLAGS = "-s"

---

(source_file
  (config_block
    name: (string)
    (lua_code)))

================
Comment
================

# this is a comment

---

(source_file
  (comment))

================
Multiple top-level declarations
================

use cpp

import backend ./services/backend

config debug
    var.CFLAGS = "-g"

---

(source_file
  (use_declaration
    module: (identifier))
  (import_declaration
    name: (import_name)
    path: (path))
  (config_block
    name: (identifier)
    (lua_code)))

================
Register block (empty)
================

register

---

(source_file
  (register_block))

================
Register block (single statement)
================

use cook_cc

register
    cook_cc.bin("game", { sources = { "src/main.c" } })

---

(source_file
  (use_declaration
    module: (identifier))
  (register_block
    (lua_code)))

================
Register block (interleaved with recipe)
================

register
    a()

recipe build
    @ ./build

register
    b()

---

(source_file
  (register_block
    (lua_code))
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (lua_code))
  (register_block
    (lua_code)))

================
Top-level module call (single line) (CS-0072)
================

use cook_cc

cook_cc.bin("game", { sources = { "src/main.c" } })

---

(source_file
  (use_declaration
    module: (identifier))
  (top_level_module_call
    (module_call_text)))

================
Top-level module call (multi-line table arg) (CS-0072)
================

use cook_cc

cook_cc.bin("game", {
    sources = { "src/main.c" },
})

---

(source_file
  (use_declaration
    module: (identifier))
  (top_level_module_call
    (module_call_text)))

================
Top-level module call terminates recipe body
================

use cook_cc

recipe build
    @ ./build

cook_cc.bin("a", { sources = { "a.c" } })

---

(source_file
  (use_declaration
    module: (identifier))
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (lua_code)
    (import_name)
    (lua_code)))

================
Use declaration (CS-0035 LUA_IDENT — accepts bare ident)
================

use cook_cc

---

(source_file
  (use_declaration
    module: (identifier)))

================
Config block reading the host surface (CS-0163)
================

config profiling
    local export_dynamic = host.os == "macos"
        and "-C link-arg=-Wl,-export_dynamic"
        or "-C link-arg=-rdynamic"
    var.RUSTFLAGS = export_dynamic
    var.HOME = host.env("HOME", "")
    var.PINNED = host.read("VERSION")

---

(source_file
  (config_block
    name: (identifier)
    (lua_code)))
