tree-sitter-cook/test/corpus/placeholders.txt
================
Placeholder in cook output string
================

recipe build
    cook "build/$<in.stem>.o" { build }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)))))

================
Placeholder in shell block (using clause)
================

recipe lib
    cook "out" {
        cc -c $<in> -o $<out>
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Recipe member and probe-value placeholders
================

recipe mux
    gather scenes
    cook "build/$<in.id>.mp4" {
        mux $<render[in]> $<toolchain:cc.path> $<probe:key.field[2]> $<out>
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (identifier))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Malformed recipe-member indices reject syntactically
================

recipe mux
    cook "out" {
        mux $<render[]> $<render[0]> $<render[item]>
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (string)
    (shell_content)
    (placeholder_ident)
    (lua_code)))

================
Placeholder in plate body inside shell-quoted string
================

recipe r
    plate {
        echo "all: $<in>" > out.report
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (import_name)
    (lua_code)))

================
Placeholder in bare shell command
================

recipe r
    sleep $<SLEEP>

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (import_name)
    (lua_code)))

================
Placeholder at start of shell command
================

recipe r
    $<CMD> --flag

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (lua_code)))

================
Out-indexed and accessor placeholders
================

recipe r
    cook "a.o" "b.o" {
        cc -o $<out_1> $<out_2.stem>.tmp
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      outputs: (string)
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Multiple placeholders in one string
================

recipe r
    cook "$<a>/$<b.stem>.x" { build }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident))
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)))))

================
Placeholder in interactive command
================

recipe r
    @./bin/$<APP> --flag

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (lua_code)))

================
File-reference placeholder in shell block (CS-0101)
================

recipe html
    gather "src/page.md"
    cook "build/$<in.stem>.html" {
        render --tokens $<file:tokens.css> $<in> -o $<out>
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Declared-variable placeholder (CS-0164, CS-0172)
================

config
    var.CFLAGS = "-O2"

recipe obj
    gather "src/*.c"
    cook "build/{in.stem}.o" {
        cc $<var.CFLAGS> -c $<in> -o $<out>
    }

---

(source_file
  (config_block
    (lua_code))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Bare declared-variable placeholder (CS-0164)
================

config
    var.MODE = "debug"

recipe build
    cook "build/out.txt" { echo $<MODE> > $<out> }

---

(source_file
  (config_block
    (lua_code))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))
